Correct Claude HeauX name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>In honor of <a href="http://petitlien.fr/clodov2">Claude Heau</a>.</p>
+              <p>In honor of <a href="http://petitlien.fr/clodov2">Claude Heaux</a>.</p>
             </div>
           </div>
 
